added schooling in the home list

--- a/assests/styles/Homepage.css
+++ b/assests/styles/Homepage.css
@@ -82,6 +82,14 @@ body {
   color: transparent;
 }
 
+.schooling {
+  padding: 11px;
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  color: transparent;
+}
 .toggle {
   color: black;
 }
